--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -17,60 +17,119 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="@string/community_title" />
 
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/communityChipGroup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/common_margin"
-        android:layout_marginEnd="@dimen/common_margin"
-        app:checkedChip="@id/allChip"
+    <HorizontalScrollView
+        android:id="@+id/communityChipGroupHorizontalScrollView"
+        android:layout_width="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
+        android:scrollbars="none"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/communityToolbar"
-        app:singleSelection="true">
+        android:layout_height="wrap_content">
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/allChip"
-            style="@style/CustomChipChoice"
-            android:layout_width="wrap_content"
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/communityChipGroup"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/chip_all"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            app:checkedIcon="@null"
-            app:checkedIconVisible="false" />
+            android:layout_marginStart="@dimen/common_margin"
+            android:layout_marginEnd="@dimen/common_margin"
+            app:checkedChip="@id/allChip"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/communityToolbar"
+            app:singleSelection="true">
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/dailyChip"
-            style="@style/CustomChipChoice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/chip_daily"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            app:checkedIcon="@null"
-            app:checkedIconVisible="false" />
+            <com.google.android.material.chip.Chip
+                android:id="@+id/allChip"
+                style="@style/CustomChipChoice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/chip_all"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                app:checkedIcon="@null"
+                app:checkedIconVisible="false" />
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/walkLogChip"
-            style="@style/CustomChipChoice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/chip_walk_log"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            app:checkedIcon="@null"
-            app:checkedIconVisible="false" />
+            <com.google.android.material.chip.Chip
+                android:id="@+id/dailyChip"
+                style="@style/CustomChipChoice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/chip_daily"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                app:checkedIcon="@null"
+                app:checkedIconVisible="false" />
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/placeReviewChip"
-            style="@style/CustomChipChoice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/place_review"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            app:checkedIcon="@null"
-            app:checkedIconVisible="false" />
+            <com.google.android.material.chip.Chip
+                android:id="@+id/walkLogChip"
+                style="@style/CustomChipChoice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/chip_walk_log"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                app:checkedIcon="@null"
+                app:checkedIconVisible="false" />
 
-    </com.google.android.material.chip.ChipGroup>
+            <com.google.android.material.chip.Chip
+                android:id="@+id/placeReviewChip"
+                style="@style/CustomChipChoice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/place_review"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                app:checkedIcon="@null"
+                app:checkedIconVisible="false" />
 
+            <com.google.android.material.chip.Chip
+                android:id="@+id/placeReviewChip1"
+                style="@style/CustomChipChoice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/place_review"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                app:checkedIcon="@null"
+                app:checkedIconVisible="false" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/placeReviewChip2"
+                style="@style/CustomChipChoice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/place_review"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                app:checkedIcon="@null"
+                app:checkedIconVisible="false" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/placeReviewChip3"
+                style="@style/CustomChipChoice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/place_review"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                app:checkedIcon="@null"
+                app:checkedIconVisible="false" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/placeReviewChip4"
+                style="@style/CustomChipChoice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/place_review"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                app:checkedIcon="@null"
+                app:checkedIconVisible="false" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/placeReviewChip5"
+                style="@style/CustomChipChoice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/place_review"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                app:checkedIcon="@null"
+                app:checkedIconVisible="false" />
+
+        </com.google.android.material.chip.ChipGroup>
+    </HorizontalScrollView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/communityPostRecyclerView"
@@ -79,7 +138,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/communityChipGroup"
+        app:layout_constraintTop_toBottomOf="@id/communityChipGroupHorizontalScrollView"
         tools:listitem="@layout/row_community" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
