feat : 카테고리 chip에서  머티리얼 디자인 사이드 시트로 변경

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,13 +33,17 @@
 
  
 
-    <style name="CustomChipChoice" parent="@style/Widget.MaterialComponents.Chip.Filter">
+    <style name="CustomChipChoice" parent="@style/Widget.Material3.Chip.Filter">
 
         <item name="chipBackgroundColor">@color/slecte_checked_chip</item>
 
         <item name="android:textColor">@color/slecte_checked_chip_text</item>
 
     </style>
+
+
+
+
 
     <style name="BottomNavigationView">
         <item name="colorSecondaryContainer">@color/seed</item>
