--- a/app/src/main/res/menu/community_category_menu.xml
+++ b/app/src/main/res/menu/community_category_menu.xml
@@ -3,8 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/item_category"
+        android:id="@+id/item_community_search"
         android:title="@string/category"
+        android:icon="@drawable/search"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/item_community_category"
+        android:title="@string/category"
+        android:icon="@drawable/dehaze"
         app:showAsAction="always" />
 
 </menu>
