--- a/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -38,8 +38,8 @@
             android:id="@+id/action_item_community_to_communityDetailModifyFragment"
             app:destination="@id/communityDetailModifyFragment" />
         <action
-            android:id="@+id/action_item_community_to_communityCategoryListFragment"
-            app:destination="@id/communityCategoryListFragment"
+            android:id="@+id/action_item_community_to_communitySearchFragment"
+            app:destination="@id/communitySearchFragment"
             app:enterAnim="@anim/from_right"
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
@@ -156,13 +156,17 @@
         android:label="fragment_walk_mate_request"
         tools:layout="@layout/fragment_walk_mate_request" />
     <fragment
-        android:id="@+id/communityCategoryListFragment"
-        android:name="com.petpal.mungmate.ui.community.CommunityCategoryListFragment"
-        android:label="fragment_community_category_list"
-        tools:layout="@layout/fragment_community_category_list" >
+        android:id="@+id/communitySearchFragment"
+        android:name="com.petpal.mungmate.ui.community.CommunitySearchFragment"
+        android:label="fragment_community_search"
+        tools:layout="@layout/fragment_community_search" >
         <action
-            android:id="@+id/action_communityCategoryListFragment_to_item_community"
-            app:destination="@id/item_community" />
+            android:id="@+id/action_communitySearchFragment_to_item_community"
+            app:destination="@id/item_community"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/from_right"
+            app:popExitAnim="@anim/to_left" />
     </fragment>
 
 </navigation>
