--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,7 @@
     <dimen name="common_padding">16dp</dimen>
     <dimen name="common_margin">16dp</dimen>
     <dimen name="common_small_padding">5dp</dimen>
-    <dimen name="common_margin_padding">5dp</dimen>
+    <dimen name="common_small_margin">5dp</dimen>
     <dimen name="bottom_navigation_icon_size">15dp</dimen>
 
 </resources>
