--- a/app/src/main/res/layout/row_inquiry.xml
+++ b/app/src/main/res/layout/row_inquiry.xml
@@ -1,7 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:id="@+id/layoutInquiryHeader"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewInquirySubject"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_weight="1"
+                android:text="[포인트] 포인트가 누락됐어요.."
+                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chipInquiryState"
+                style="@style/Widget.Material3.Chip.Assist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:clickable="false"
+                android:text="답변완료"
+                app:chipMinTouchTargetSize="32dp" />
+
+            <ImageView
+                android:id="@+id/imageViewInquiryExpand"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/expand_more_24px" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textViewInquiryTimestamp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="2023.09.10 10:04" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutInquiryBody"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/md_theme_light_surfaceVariant"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textViewInquiryContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:text="산책을 끝냈는데도 포인트가 안들어왔어요ㅠㅠ\n확인 부탁드립니다.." />
+
+        <com.google.android.material.divider.MaterialDivider
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="16dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="8dp"
+                app:srcCompat="@drawable/subdirectory_arrow_right_24px" />
+
+            <TextView
+                android:id="@+id/textViewInquiryAnswer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="100 포인트 적립 도와드렸습니다!" />
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
