--- a/app/src/main/res/menu/menu_go_home.xml
+++ b/app/src/main/res/menu/menu_go_home.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/item_go_home"
+        android:id="@+id/menu_item_go_home"
         android:icon="@drawable/home_24px"
         android:title="홈"
         app:showAsAction="always" />
