--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/item_search"
+        android:id="@+id/menu_item_search"
         android:icon="@drawable/search_24px"
         android:title="검색"
         app:showAsAction="always" />
