feat : 채팅방 메뉴 Dialog 표시 (Material Dialog 가이드라인 적용)

--- a/app/src/main/res/menu/menu_chat_room.xml
+++ b/app/src/main/res/menu/menu_chat_room.xml
@@ -6,8 +6,7 @@
         android:title="차단하기" />
     <item
         android:id="@+id/menu_item_unblock"
-        android:title="차단해제"
-        android:visible="false" />
+        android:title="차단해제" />
     <item
         android:id="@+id/menu_item_report"
         android:title="신고하기" />
