--- a/app/src/main/res/layout/fragment_report_user.xml
+++ b/app/src/main/res/layout/fragment_report_user.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.chatting.ReportUserFragment" >
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/materialToolbar2"
+        android:id="@+id/toolbar_report_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
