--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -50,11 +50,11 @@
                             android:layout_height="match_parent"
                             android:orientation="horizontal">
 
-                            <ImageView
+                            <de.hdodenhof.circleimageview.CircleImageView
                                 android:id="@+id/imageView"
                                 android:layout_width="50dp"
                                 android:layout_height="50dp"
-                                android:src="@drawable/account_circle_24px" />
+                                android:src="@drawable/account_circle_24px"/>
 
                             <LinearLayout
                                 android:layout_width="0dp"
@@ -219,6 +219,23 @@
                                 android:src="@drawable/navigate_next_24px" />
 
                         </LinearLayout>
+
+                        <View
+                            android:id="@+id/divider6"
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginTop="16dp"
+                            android:background="?android:attr/listDivider" />
+
+                        <TextView
+                            android:id="@+id/buttonGoToMatchHistory"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="16dp"
+                            android:text="매칭 기록 보기"
+                            android:textAlignment="center"
+                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
+
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
 
@@ -384,13 +401,13 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/buttonMatchHistory"
+                    android:id="@+id/buttonGoToManageBlock"
                     android:layout_width="match_parent"
                     android:layout_height="49dp"
                     android:clickable="true"
                     android:focusable="true"
                     android:gravity="center_vertical"
-                    android:text="매칭 기록"
+                    android:text="차단 관리"
                     android:textAppearance="?attr/textAppearanceTitleMedium"
                     android:textStyle="bold" />
             </LinearLayout>
