--- a/app/src/main/res/layout/fragment_walk_history_detail.xml
+++ b/app/src/main/res/layout/fragment_walk_history_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".WalkHistoryDetailFragment" >
+    tools:context=".ui.walkhistory.WalkHistoryDetailFragment" >
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbarWalkHistoryDetail"
