--- a/app/src/main/res/navigation/mypage.xml
+++ b/app/src/main/res/navigation/mypage.xml
@@ -42,4 +42,42 @@
             android:id="@+id/action_to_walkHistoryFragment"
             app:destination="@id/walkHistoryFragment" />
     </fragment>
+
+    <!-- 고객센터 -->
+    <fragment
+        android:id="@+id/FAQFragment"
+        android:name="com.petpal.mungmate.ui.customercenter.FAQFragment"
+        android:label="fragment_f_a_q"
+        tools:layout="@layout/fragment_f_a_q" >
+        <action
+            android:id="@+id/action_FAQFragment_to_contactUsFragment"
+            app:destination="@id/contactUsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/inquiryFragment"
+        android:name="com.petpal.mungmate.ui.customercenter.InquiryFragment"
+        android:label="fragment_inquiry"
+        tools:layout="@layout/fragment_inquiry" >
+        <action
+            android:id="@+id/action_inquiryFragment_to_contactUsFragment"
+            app:destination="@id/contactUsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/contactUsFragment"
+        android:name="com.petpal.mungmate.ui.customercenter.ContactUsFragment"
+        android:label="fragment_contact_us"
+        tools:layout="@layout/fragment_contact_us" />
+    <fragment
+        android:id="@+id/announcementFragment"
+        android:name="com.petpal.mungmate.ui.customercenter.AnnouncementFragment"
+        android:label="AnnouncementFragment" >
+        <action
+            android:id="@+id/action_announcementFragment_to_announcementDetailFragment"
+            app:destination="@id/announcementDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/announcementDetailFragment"
+        android:name="com.petpal.mungmate.ui.customercenter.AnnouncementDetailFragment"
+        android:label="fragment_announcement_detail"
+        tools:layout="@layout/fragment_announcement_detail" />
 </navigation>
